tests/sqlcmd/baselines/errors/remove_classes5.outbaseline

REMOVE CLASSES nonexistent.NonExistent;
Command succeeded.
